[package]
name = "constitute-build"
version = "0.1.0"
edition = "2024"

[lib]
name = "constitute_build"
path = "src/lib.rs"

[[bin]]
name = "constitute-build"
path = "src/main.rs"

[dependencies]
anyhow = "1"
constitute-fabric = { path = "../constitute-fabric" }
constitute-protocol = { path = "../constitute-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
